# ssd-gpu-dma

./: .gitignore  4.4.0-57-generic  CMakeLists.txt  LICENSE  Makefile  README.md  make_bindings.py  unbind.sh
4.4.21jonas/: core.c  nvme.h  pci.c
benchmarks/cuda/: CMakeLists.txt  buffer.cu  buffer.h  ctrl.cc  ctrl.h  event.h  main.cu  queue.cu  queue.h  settings.cu  settings.h
benchmarks/dis-latency/: CMakeLists.txt  manager.cu  segment.cu  segment.h  settings.h  transfer.cc  transfer.h
benchmarks/latency/: CMakeLists.txt  barrier.cc  barrier.h  benchmark.h  buffer.cu  buffer.h  ctrl.cc  ctrl.h  main.cc  main.cu  map.cc  map.h  queue.cc  queue.h  settings.cu  settings.h  transfer.cc  transfer.h
benchmarks/latency-comparison/: CMakeLists.txt  buffer.cu  buffer.h  ctrl.cc  main.cu  settings.cu  settings.h
benchmarks/latency/include/: barrier.h  benchmark.h  buffer.h  ctrl.h  gpu.h  queue.h  settings.h  stats.h  transfer.h  utility.h
benchmarks/latency/smartio/: buffer.cc  ctrl.cc  gpu.cc  queue.cc
benchmarks/latency/src/: barrier.cc  benchmark.cc  buffer.cc  ctrl.cc  gpu.cu  host.cu  main.cc  queue.cc  settings.cc  stats.cc
benchmarks/simple-rdma/: CMakeLists.txt  benchmark.cc  benchmark.cu  benchmark.h  dma.cu  dma.h  main.cu  manager.cc  manager.h  queue.cc  queue.h  report.h  settings.h  stats.cc  stats.h  transfer.cc  transfer.h
examples/: CMakeLists.txt  README.md
examples/common/: util.c  util.h
examples/common/dis/: node.h  segment.h
examples/dis-rpc/: CMakeLists.txt  rpc_client.c
examples/dis-rw/: CMakeLists.txt  rw.c
examples/identify/: CMakeLists.txt  common.c  common.h  module.c  no_module.c  smartio.c  userspace.c  with_module.c
examples/integrity/: CMakeLists.txt  integrity.c  integrity.h  transfer.c  util.c
examples/manager/: admin_manager.c
examples/native/: test.c
examples/read-blocks/: CMakeLists.txt  args.c  args.h  module.c  read.c  read.h  smartio.c
examples/read-example/: CMakeLists.txt  read.c  transfer.c  transfer.h
examples/rpc/: CMakeLists.txt  rpc_client.c  rpc_dd.c  rpc_flush.c  rpc_identify.c  rpc_server.c  segment.c  segment.h  util.c  util.h
examples/rw-example/: CMakeLists.txt  rw.c  transfer.c  transfer.h
examples/util/: util.c
fio/: fio_plugin.c
include/: cunvme_ioctl.h  nvm_admin.h  nvm_aq.h  nvm_cmd.h  nvm_command.h  nvm_ctrl.h  nvm_dma.h  nvm_error.h  nvm_manager.h  nvm_queue.h  nvm_rpc.h  nvm_types.h  nvm_util.h  request.h  ssd_dma.h
module/: Makefile.in  cdev.c  ctrl.c  ctrl.h  ctrl_dev.h  ctrl_ref.h  cunvme.c  dev.c  disnvme.c  ioctl.h  list.c  list.h  main.c  map.c  map.h  nvm_ioctl.h  pci.c
samples/: CMakeLists.txt
samples/dis-manager/: dis_manager.c
samples/dis-rpc-manager/: CMakeLists.txt  rpc_server.c
samples/dis-rw-example/: CMakeLists.txt  rw.c
samples/identify/: CMakeLists.txt
samples/rpc-example/: CMakeLists.txt
samples/rw-example/: CMakeLists.txt
samples/samples-common/: common_util.c  dis_node.c  dis_segment.c
samples/samples-include/: util.h
samples/samples-include/dis/: node.h  segment.h
src/: admin.c  admin.h  bind.c  bind.h  command.c  ctrl.c  ctrl.h  device.h  dma.c  dma.h  dprintf.h  dprintnvm.h  error.c  file.c  file.h  ioctl.h  main.c  manager.c  mutex.c  mutex.h  nvme.c  nvme.h  pcidev.h  queue.c  regs.h  rpc.c  rpc.h  userspace.c  util.h
src/dis/: device.c  device.h  dma.c  interrupt.c  interrupt.h  local.c  local.h  map.c  map.h  rpc.c
src/linux/: device.c  dma.c  ioctl.h  map.h
test/: example.c
userspace/: cuda.cu  cuda.h  cunvme.c  ioctl.cu  ioctl.h  memory.c  memory.cu  memory.h  message.c  message.h  nvme.h  nvme_core.c  nvme_core.cu  nvme_core.h  nvme_init.c  nvme_init.h  nvme_queue.c  nvme_queue.h  page.cu  page.h  pci.c  pci.h  queue.h  util.h  workload.c  workload.cu
userspace/memory/: common.c  gpu.cu  gpu.h  ram.c  ram.h  types.h
userspace/nvm/: command.c  command.cu  command.h  ctrl.c  ctrl.h  queue.c  queue.cu  queue.h  types.h  util.h
